feat: 新增抽籤說明

--- a/index.html
+++ b/index.html
@@ -27,13 +27,43 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-12">
+			<div class="col-12 mb-2">
 				<div class="card">
 					<div class="card-body">
 						<table class="table mb-0">
-							<caption class="small text-end">資料最後更新時間：2021/10/14 10:38 AM</caption>
+							<caption class="small">
+								<div class="d-flex flex-wrap justify-content-end">
+									<div>資料最後更新時間：</div><div>2021/10/14 10:38 AM</div>
+								</div>
+							</caption>
 							<tbody class="border-top-0"></tbody>
 						</table>
+					</div>
+				</div>
+			</div>
+			<div class="col-12 mb-2">
+				<div class="card">
+					<div class="card-body">
+						<div class="mb-2"><strong>📃各部會加碼券中籤結果說明：</strong></div>
+						<ol>
+							<li>
+								各部會抽出中籤號碼 2 碼或 3 碼，對應民眾的<span class="text-danger">身分證號/統一證號末 2 碼或 3 碼</span>，如完全符合者，即具中籤資格。<br><br>
+								範例說明：<br>
+								第一週，「國旅券」有一組中籤號碼 58，民眾身分證號/統一證號末 2 碼為 58，且民眾於 10/8 前有勾選「國旅券」者，具中籤資格。
+							</li>
+							<hr>
+							<li>
+								每人每週最多中籤 <span class="text-danger">1</span> 次，<span class="text-danger">4</span> 週最多可有 <span class="text-danger">4</span> 次中籤機會，每種券別僅能中籤 <span class="text-danger">1</span> 次。同一週各部會加碼券的中籤號碼可能重複，民眾中籤結果，依民眾個人<strong>所勾選的加碼券及各部會抽籤時間之先後順序</strong>決定。<br><br>
+								範例說明：<br>
+								如民眾的身分證號/統一證號末兩碼為 58，於 10/8 前，同時勾選「國旅券、i原券、動滋券、客庄券」。
+								<ul>
+									<li>每人每週最多中籤 1 次：第一週，「國旅券」有一組中籤號碼 58，「i原券」也有一組中籤號碼 58。因「國旅券」抽籤時間早於「i原券」，故，民眾抽中「國旅券」。民眾中籤後，如未使用，視同放棄，不得選擇其他部會加碼券。</li>
+									<li>每種券別僅能中籤 1 次：第一週，「國旅券」有一組中籤號碼 58；第三週，「國旅券」又有一組中籤號碼 58。因民眾第一週已中籤「國旅券」，第三週不再重複中籤。</li>
+								</ul>
+							</li>
+							<hr>
+							<li>各部會加碼券於第一至三週之每週抽籤中籤名額如高於公告之每週份數，將於第四週以總份數扣除前三週已抽出份數之剩餘數，做為第四週預計抽籤之份數。</li>
+						</ol>
 					</div>
 				</div>
 			</div>
