fix: 輸入最小值 0

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<div class="card-body">
 						<div class="mb-3">
 							<label for="id-num" class="form-label">🆔請輸入身分證<span class="text-danger"><strong>尾數</strong></span></label>
-							<input type="number" class="form-control" id="id-num">
+							<input type="number" class="form-control" id="id-num" min="0">
 						</div>
 					</div>
 				</div>
