--- a/index.html
+++ b/index.html
@@ -17,31 +17,26 @@
 	</nav>
 	<div class="container py-3">
 		<div class="row">
-			<div class="col-12 mb-2">
+			<div class="col-12 col-lg-6 mb-2">
 				<div class="card">
 					<div class="card-body">
 						<div class="mb-3">
 							<label for="id-num" class="form-label">🆔請輸入身分證<span class="text-danger"><strong>尾數</strong></span></label>
 							<input type="number" class="form-control" id="id-num" min="0">
+							<hr>
+							<table class="table mb-0">
+								<caption class="small">
+									<div class="d-flex flex-wrap justify-content-end">
+										<div>資料最後更新時間：</div><div>2021/10/14 10:38 AM</div>
+									</div>
+								</caption>
+								<tbody class="border-top-0"></tbody>
+							</table>
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-12 mb-2">
-				<div class="card">
-					<div class="card-body">
-						<table class="table mb-0">
-							<caption class="small">
-								<div class="d-flex flex-wrap justify-content-end">
-									<div>資料最後更新時間：</div><div>2021/10/14 10:38 AM</div>
-								</div>
-							</caption>
-							<tbody class="border-top-0"></tbody>
-						</table>
-					</div>
-				</div>
-			</div>
-			<div class="col-12 mb-2">
+			<div class="col-12 col-lg-6 mb-2">
 				<div class="card">
 					<div class="card-body">
 						<div class="mb-2"><strong>📃各部會加碼券中籤結果說明：</strong></div>
