feat: js 加上版號避免 browser cache

--- a/index.html
+++ b/index.html
@@ -64,6 +64,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="script.js?version=1.0.0"></script>
 </body>
 </html>
