--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="./browsersupport.js"></script>
 	</head>
 <body>
 	<nav class="nav bg-dark">
@@ -64,6 +65,6 @@
 			</div>
 		</div>
 	</div>
-	<script src="script.js?version=2.12.0"></script>
+	<script src="script.js?version=2.13.0"></script>
 </body>
 </html>
